--- a/public/404.html
+++ b/public/404.html
@@ -58,9 +58,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>You have dropped to the abyss of the lava.</h1>
+      <p>Whatever you were looking for doesn't currently exist at this address.</p>
     </div>
+    <p>If you were visiting the colosseo homepage, stay tuned, it's coming soon.</p>
   </div>
 </body>
 </html>
