--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>You have dropped to the abyss of the lava (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
@@ -61,7 +61,7 @@
       <h1>You have dropped to the abyss of the lava.</h1>
       <p>Whatever you were looking for doesn't currently exist at this address.</p>
     </div>
-    <p>If you were visiting the colosseo homepage, stay tuned, it's coming soon.</p>
+    <p>If you were visiting the Colosseo homepage, stay tuned, it's coming soon.</p>
   </div>
 </body>
 </html>
